--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "author": "Maxime Nicole <maxime.nicole@icloud.com>",
   "license": "MIT",
   "dependencies": {
+    "connect-slashes": "^1.3.1",
+    "ejs": "^2.3.4",
+    "express.io": "^1.1.13",
     "http": "0.0.0",
-    "socket.io": "^1.3.7"
+    "path": "^0.12.7",
+    "socket.io": "^1.3.7",
+    "ssh2": "^0.4.11"
   }
 }
