--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "connect-slashes": "^1.3.1",
     "ejs": "^2.3.4",
+    "express": "^4.13.3",
     "express.io": "^1.1.13",
     "http": "0.0.0",
     "path": "^0.12.7",
