--- a/package.json
+++ b/package.json
@@ -6,11 +6,24 @@
   "author": "Maxime Nicole <maxime.nicole@icloud.com>",
   "license": "MIT",
   "dependencies": {
+    "async": "^1.4.2",
     "connect-slashes": "^1.3.1",
     "ejs": "^2.3.4",
+    "episoder": "^0.1.5",
     "express": "^4.13.3",
+    "forecast": "^0.2.1",
+    "fs-extra": "^0.24.0",
+    "googleapis": "^2.1.5",
+    "gpio": "^0.2.7",
+    "moviedb": "^0.2.2",
     "path": "^0.12.7",
+    "rimraf": "^2.4.3",
     "socket.io": "^1.3.7",
-    "ssh2": "^0.4.11"
+    "ssh2": "^0.4.11",
+    "to-title-case": "^0.1.5",
+    "underscore": "^1.8.3",
+    "walk": "^2.3.9",
+    "wget": "0.0.1",
+    "winston": "^1.1.1"
   }
 }
