--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gpio": "^0.2.7",
     "moviedb": "^0.2.2",
     "path": "^0.12.7",
+    "pmx": "^0.5.5",
     "rimraf": "^2.4.3",
     "socket.io": "^1.3.7",
     "ssh2": "^0.4.11",
