--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "fs-extra": "^0.24.0",
     "googleapis": "^2.1.5",
     "gpio": "^0.2.7",
+    "mongodb": "^2.0.46",
+    "monk": "^1.0.1",
     "moviedb": "^0.2.2",
     "path": "^0.12.7",
     "pmx": "^0.5.5",
